k8s-resources/r-studio-example/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: r-studio-example
  labels:
    app: r-studio-example
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: r-studio-example
    spec:
      containers:

        - name: rstudio-auth-proxy
          image: kerin/rstudio-auth-proxy:v8
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 10m

        - name: r-studio-server
          image: kerin/analytics-r-studio-pro:v7
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8787
          resources:
            requests:
              cpu: 200m
          volumeMounts:
            - name: r-studio-nfs
              mountPath: "/mnt"
            - name: config-volume
              mountPath: /etc/rstudio-config/

      volumes:
      - name: r-studio-nfs
        persistentVolumeClaim:
          claimName: r-studio-pvc
      - name: config-volume
        configMap:
          name: r-studio-example
