k8s-resources/r-studio-example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: r-studio-example
  labels:
    app: r-studio-example
spec:
  sessionAffinity: ClientIP
  selector:
    app: r-studio-example
  ports:
  - port: 80
    targetPort: 3000
